fixed footer issue for desktop. Added spacing between home h1 and the nav-heading. Removed border colour from the save and remove buttons

--- a/src/App.css
+++ b/src/App.css
@@ -13,4 +13,7 @@ Body
 ============= */
 body {
   background-color: var(--bg-light-blue) !important;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh !important;
 }
