--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -5,8 +5,8 @@ Home (landing page)
 #home-bg {
   padding: 0%;
   margin: 0%;
-  height: 90vh;
-  width: 100vw;
+  height: 94.2vh !important;
+  width: 100% !important;
   background-image: url(/public/images/pets-landing05.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -15,6 +15,8 @@ Home (landing page)
 
 /* Home heading (sets margin top so heading isn't covered by Navbar, and font styling) */
 #home-heading h1 {
+  padding-top: 10px;
+  padding-bottom: 10px;
   margin-top: 100px;
   font-family: "Lilita One", sans-serif;
   font-weight: 400;
